--- a/trunk/configdebug/configdebug/demo/configdebug.properties
+++ b/trunk/configdebug/configdebug/demo/configdebug.properties
@@ -1,7 +1,7 @@
 ##tip information
 accessMethodTip=accessMethod
 debugUrlTip=debugUrl
-parametersMultirowTip=parameters(Multirows)
+parametersMultirowTip=parameters(Multirow)
 actionAndMethodTip=actionAndMethod
 executeTimeTip=executeTime
 configFilePathTip=configFilePath
